--- a/responsiveWebsite/css/style.css
+++ b/responsiveWebsite/css/style.css
@@ -26,3 +26,11 @@
 
     --transition: all 400ms ease;
 }
+
+
+body{
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.7;
+    color: var(--color-white);
+    background-color: var(--color-bg);
+}
