--- a/responsiveWebsite/css/style.css
+++ b/responsiveWebsite/css/style.css
@@ -1,3 +1,8 @@
+
+
+/*
+- Set no styles on any elements 
+*/
 *{
     margin:0;
     padding:0;
@@ -8,7 +13,10 @@
     box-sizing: border-box;
 }
 
-
+/*
+- Theme Colors
+- General sizes and transitions 
+*/
 :root{
     --color-primary: #6c63ff;
     --color-success: #00bf8e;
@@ -20,7 +28,7 @@
     --color-bg1: #2e3267;
     --color-bg2: #424890;
 
-    --container-width-lg: 76%;
+    --container-width-lg: 80%;
     --container-width-md: 90%;
     --container-width-sm: 94%;
 
@@ -33,4 +41,60 @@ body{
     line-height: 1.7;
     color: var(--color-white);
     background-color: var(--color-bg);
+}
+
+.container{
+    width: var(--container-width-lg);
+    margin: 0 auto;
+}
+
+section{
+    padding: 6rem;
+}
+
+section h2{
+    text-align: center;
+    margin-bottom: 4rem;
+}
+
+h1,h2,h3,h4,h5{
+    line-height: 1.2rem;
+}
+
+h1{
+    line-height: 2.4rem;
+}
+h2{
+    font-size: 2rem;
+}
+h3{
+    font-size: 1.6rem;
+}
+h4{
+    font-size: 1.3rem;
+}
+
+a{
+    color: var(--color-white);
+}
+
+img{
+    width: 100%;
+    display: block;
+    object-fit: cover;
+}
+
+.btn{
+    display: inline-block;
+    background: var(--color-white);
+    color: var(--color-black);
+    padding: 1rem 2rem;
+    font-weight: 500;
+}
+
+.btn:hover{
+    background: transparent;
+    color: white;
+    border-color: var(--color-white);
+
 }
