--- a/responsiveWebsite/css/style.css
+++ b/responsiveWebsite/css/style.css
@@ -105,7 +105,8 @@ img{
 }
 
 
-/* - NAVBAR */
+
+/* * NAVBAR */
 nav{
     background: transparent;
     width: 100vw;
@@ -141,6 +142,31 @@ nav button{
 .nav__menu a:hover{
     color: var(--color-bg2);
 }
+/* ! END NAVBAR */
 
+
+
+
+
+
+
+/* * HEADER */
+header{
+    position: relative;
+    top: 5rem;
+    overflow: hidden;
+    height: 70vh;
+    margin-bottom: 5rem;
+}
+
+.header__container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 5rem;
+    height: 100%;
+}
+
+/* ! END HEADER */
 
 
