--- a/responsiveWebsite/css/style.css
+++ b/responsiveWebsite/css/style.css
@@ -175,3 +175,18 @@ header{
 /* ! END HEADER */
 
 
+.categories{
+    background: var(--color-bg1);
+
+}
+.categories h1{
+    line-height: 1rem;
+    margin-bottom: 3rem;
+}
+
+.categories__container{
+    display: grid;
+    grid-template-columns: 40% 60%;
+    gap: 4rem;
+}
+
