--- a/DeconTrailerOperations/css/style.css
+++ b/DeconTrailerOperations/css/style.css
@@ -1,32 +1,63 @@
 *{
+    padding:0;
     margin: 0;
-    padding: 0;
     outline: 0;
     text-decoration: none;
-    list-style-type: none;
+    list-style: none;
     box-sizing: border-box;
 }
-
 :root{
-    --color-primary: #000000;
-    --color-success: green;
-    --color-warning: orange;
+    --color-primary: rgb(243, 255, 11);
     --color-danger: red;
+    --color-warning: orange;
+    --color-success: limegreen;
     --color-white: #fff;
     --color-black: #000;
-    --color-bg: #c5c5c5;
-    --color-bg1: #2600ffc0;
-    --color-bg2: #2100c4;
+    --color-bg: #efefef;
+    --color-bg1: blue;
+    --color-bg2: blue;
+
+    --container-sz-lg: 80%;
+    --container-sz-md: 85%;
+    --container-sz-sm: 90%;
+
+    --transition: all 1s ease-in-out;
 }
 
 body{
-    background: #efefef;
+    background-color: var(--color-bg);
     font-size: 16px;
 
 }
-
-nav{
-    position: fixed;
-    width: 20%;
+img{
+    width: 100%;
+}
+h1,h2,h3,h4,h5,h6{
+    line-height: 1.2rem;
+}
+h1{
+    line-height: 2.2rem;
+}
+h2{
+    line-height: 1.8rem;
+}
+h3{
+    font-size: 1.6rem;
+}
+h4{
+    font-size: 1.4rem;
+}
+.main-container{
     height: 100vh;
+    display: grid;
+    grid-template-columns: 1.2fr 8fr;
+    grid-template-rows: .1fr 1fr .3fr;
+    grid-template-areas: 
+    "nav header"
+    "nav main"
+    "nav content-controller";
+}
+
+.container{
+    width: 90%;
 }
