not very familiar with fr units. Will use percentages instead

--- a/DeconTrailerOperations/css/style.css
+++ b/DeconTrailerOperations/css/style.css
@@ -50,8 +50,8 @@ h4{
 .main-container{
     height: 100vh;
     display: grid;
-    grid-template-columns: 1.2fr 8fr;
-    grid-template-rows: .1fr 1fr .3fr;
+    grid-template-columns: 10% 90%;
+    grid-template-rows: 10% 80% 10%;
     grid-template-areas: 
     "nav header"
     "nav main"
