--- a/DeconTrailerOperations/css/_content.css
+++ b/DeconTrailerOperations/css/_content.css
@@ -9,7 +9,7 @@ div.content-container{
     "topic"
     "illustration"
     "message";
-    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-rows: .2fr .8fr .2fr;
     justify-items: center;
 }
 .topic{
