--- a/DeconTrailerOperations/css/style.css
+++ b/DeconTrailerOperations/css/style.css
@@ -15,7 +15,7 @@
     --color-black: #000;
     --color-bg: #efefef;
     --color-bg1: blue;
-    --color-bg2: blue;
+    --color-bg2: rgb(0, 0, 255,.4);
 
     --container-sz-lg: 80%;
     --container-sz-md: 85%;
