--- a/DeconTrailerOperations/css/_content_controller.css
+++ b/DeconTrailerOperations/css/_content_controller.css
@@ -1,3 +1,21 @@
 div.content-controller-container{
     grid-area: content-controller;
+    display: grid;
+    grid-template-areas: 
+    "left right";
+    grid-template-columns: 50% 50%;
+    justify-items: center;
+    
+}
+.left{
+    grid-area: left;
+}
+.right{
+    grid-area: right;
+}
+
+.btn{
+    padding: 1rem 2rem;
+    font-size: 1.3rem;
+    background: linear-gradient(to bottom, orange,rgb(179, 116, 1))
 }
