--- a/DeconTrailerOperations/css/_content.css
+++ b/DeconTrailerOperations/css/_content.css
@@ -8,20 +8,13 @@ div.content-container{
 #preInformation{
     grid-template-areas: 
     "topic"
-    "illustration"
     "message";
-    grid-template-rows: 10% 50% 40%;
+    grid-template-rows: 30% 70%;
 }
 .topic{
     grid-area: topic;
 }
-.illustration{
-    grid-area: illustration;
-    background: url(../images/stock/IMG_20220609_151823544_HDR.jpg);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-}
+
 .message{
     grid-area: message;
     text-align: center;
