--- a/DeconTrailerOperations/css/_nav.css
+++ b/DeconTrailerOperations/css/_nav.css
@@ -1,26 +1,21 @@
 nav{
     grid-area: nav;
     background-color: var(--color-bg1);
+    color: yellow;
 }
 
-.nav-container a{
-    color: var(--color-primary);
+.nav-container{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
-.nav-container #logo{
-    font-weight: 900;
-}
+
 .nav-container .nav-menu{
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1rem
 }
-.nav-container .nav-menu ul.nav-subMenu{
-    margin-left: 1rem;
-    list-style-type: circle;
-}
-#startUp_subMenu{
-    display: none;
-}
-#startUp_mainNavItem:focus-within + #startUp_subMenu{
-    display: block;
+.nav-container .nav-menu li > a{
+    font-size: 1.2rem;
+    color: yellow;
 }
