--- a/DeconTrailerOperations/css/style.css
+++ b/DeconTrailerOperations/css/style.css
@@ -50,7 +50,7 @@ h4{
 .main-container{
     height: 100vh;
     display: grid;
-    grid-template-columns: 10% 90%;
+    grid-template-columns: 15% 85%;
     grid-template-rows: 10% 80% 10%;
     grid-template-areas: 
     "nav header"
@@ -59,5 +59,6 @@ h4{
 }
 
 .container{
-    width: 100%;
+    max-width: var(--container-sz-lg);
+    margin: 0 auto;
 }
